test/error/MethodPrivateAbstract.fu
public abstract class Test
{
	abstract //ERROR: Private method cannot be abstract
		bool Run();
}
